# ya_news

./: .gitignore  conftest.py  pyproject.toml  pytest.ini  requirements.txt
news/pytest_tests/: test_content.py  test_logic.py  test_routes.py
news/tests/: test_content.py  test_logic.py  test_routes.py  test_trial.py
templates/news/: detail.html
yanews/: settings.py
